# selection-rs

./: .prettierignore  .yarnrc.yml  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: CI.yml  autofix-ci.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  linux.rs  macos.rs  windows.rs
test/: index.test.ts
