[package]
edition = "2021"
name = "selection-rs_selection"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.14.4", default-features = false, features = ["napi4"] }
napi-derive = "2.14.6"
selection = "1.1.1"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
